[Template merge - und] Added support for building (compiling into binary form) cg3 files for syntactic functions and dependency graphs. Added a template file for syntactic functions. Made the compiled binary files installable through 'make install'.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@86356 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/syntax/Makefile.am
+++ b/src/syntax/Makefile.am
@@ -5,10 +5,13 @@
 # set this to name of cg3 dependency rules
 GT_DEPENDENCY=dependency.cg3
 
+# set this to name of cg3 dependency rules
+GT_FUNCTIONS=functions.cg3
+
 # set this to name of cg3 disambiguation rules
 GT_DISAMBIGUATION=disambiguation.cg3
 
 # set this to names of cg3 binaries 
-GT_CG_TARGETS=disambiguation.bin dependency.bin
+GT_CG_TARGETS=disambiguation.bin functions.bin dependency.bin
 
 include $(top_srcdir)/am-shared/syntax-include.am
