[Template merge - und] Renamed topdir-include.am to src-include.am to follow the correct naming pattern.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@86825 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -182,4 +182,4 @@ generator%.hfst: generator%.tmp.hfst
 %.xfst: %.tmp.xfst
 	$(AM_V_GEN)cp -f $< $@
 
-include $(top_srcdir)/am-shared/topdir-include.am
+include $(top_srcdir)/am-shared/src-include.am
