[Template merge - und] Renamed doc-include.am to follow the naming scheme.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -47,4 +47,4 @@ LINKS=Links.jspwiki
 
 endif # CAN_DOCC
 
-include $(top_srcdir)/am-shared/doc-include.am
+include $(top_srcdir)/am-shared/doc-dir-include.am
