[Template merge - und] Greatly improved support for the dictionary fst building: * filtering semantic tags now work properly (removed for all but Prop) * properly silent when using silent builds * added dict-specific yaml test files and corresponding test runners * removed building of reduntant dictionary fst's since we now can test   generation and analysis independently - we only test the fst's we   are actually going to use, in the intended "direction"; this should   noticably speed up compilation, especially when using hfst * all languages now build a dictionary analyser with a mobile phone   spell relax Also removed semantic tags from the regular analyser, as discussed earlier. Increased the required GTD core version, as the new version is required to fix the bug mentioned above.
NB! This merge is not complete, make check will break! An update is coming soonish!

git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@91020 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,9 +39,9 @@ GT_TRANSFORMERS_XFST=transcriptor-clock2text-desc.xfst \
 
 if WANT_DICTIONARIES
 GT_ANALYSERS_XFST+=analyser-dict-gt-desc.xfst \
-					analyser-dict-gt-norm.xfst
-GT_GENERATORS_XFST+=generator-dict-gt-norm.xfst \
-					generator-dict-gt-desc.xfst
+				   analyser-dict-gt-desc-mobile.xfst
+GT_GENERATORS_XFST+=generator-dict-gt-norm.xfst
+
 endif # WANT_DICTIONARIES
 endif # CAN_XFST
 
@@ -180,6 +180,6 @@ generator%.hfst: generator%.tmp.hfst
 
 #### Xerox transducer fallback target:
 %.xfst: %.tmp.xfst
-	$(AM_V_GEN)cp -f $< $@
+	$(AM_V_CP)cp -f $< $@
 
 include $(top_srcdir)/am-shared/src-dir-include.am
