Added reordering of semantic tags to the raw fst compilation. That is, semantic tags are now always after the POS tags, in all fst's (given that the filter is up-to-date).
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@92114 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -88,14 +88,33 @@ GT_GENERATORS_HFST+=
 endif
 
 
+#################################################
+#### Add language-specific build rules here: ####
+
+analyser-raw-gt-desc.hfst: analyser-raw-gt-desc.tmp.hfst \
+					filters/reorder-semantic-tags.hfst
+	$(AM_V_RGX2FST)$(PRINTF) "\
+				@\"filters/reorder-semantic-tags.hfst\"            \
+			.o. @\"$<\" \
+			;" \
+		| $(HFST_REGEXP2FST) $(HFST_FLAGS) -S --harmonize-flags \
+		> $@
+
+analyser-raw-gt-desc.xfst: analyser-raw-gt-desc.tmp.xfst \
+					filters/reorder-semantic-tags.xfst
+	$(AM_V_XFST)$(PRINTF) "read regex \
+				@\"filters/reorder-semantic-tags.xfst\"            \
+			.o. @\"$<\" \
+			;\n\
+		 save stack $@\n\
+		 quit\n" | $(XFST) $(VERBOSITY)
+
 # Standard generators
 # HFST:
 generator-gt-%.hfst: generator-gt-%.tmp.hfst \
-					filters/make-optional-semantic-tags.hfst \
-					filters/reorder-semantic-tags.hfst
+					filters/make-optional-semantic-tags.hfst
 	$(AM_V_GEN)$(PRINTF) \
 			   "@bin\"filters/make-optional-semantic-tags.hfst\" \
-			.o. @bin\"filters/reorder-semantic-tags.hfst\" \
 			.o. @bin\"$<\" \
 			;" \
 		| $(HFST_REGEXP2FST) $(HFST_FLAGS) -S --harmonize-flags \
@@ -103,46 +122,14 @@ generator-gt-%.hfst: generator-gt-%.tmp.hfst \
 
 # Xerox:
 generator-gt-%.xfst: generator-gt-%.tmp.xfst \
-					filters/make-optional-semantic-tags.xfst \
-					filters/reorder-semantic-tags.xfst
+					filters/make-optional-semantic-tags.xfst
 	$(AM_V_GEN)$(PRINTF) "read regex                          \
 				@\"filters/make-optional-semantic-tags.xfst\" \
-			.o. @\"filters/reorder-semantic-tags.xfst\"       \
 			.o. @\"$<\".i                                     \
 			;\n\
 		 invert net\n\
 		 save stack $@\n\
-		 quit\n" | $(XFST)
-
-
-# Standard analysers
-# HFST:
-analyser-gt-%.hfst: analyser-gt-%.tmp.hfst \
-					filters/reorder-semantic-tags.hfst
-	$(AM_V_GEN)$(PRINTF) \
-			   "@bin\"filters/reorder-semantic-tags.hfst\" \
-			.o. @bin\"$<\" \
-			;" \
-		| $(HFST_REGEXP2FST) $(HFST_FLAGS) -S --harmonize-flags \
-		| $(HFST_INVERT) \
-		> $@
-
-# Xerox:
-analyser-gt-%.xfst: analyser-gt-%.tmp.xfst \
-					filters/reorder-semantic-tags.xfst
-	$(AM_V_GEN)$(PRINTF) "read regex                          \
-				@\"filters/reorder-semantic-tags.xfst\" \
-			.o. @\"$<\"                                     \
-			;\n\
-		 save stack $@\n\
-		 quit\n" | $(XFST)
-
-
-
-
-
-#################################################
-#### Add language-specific build rules here: ####
+		 quit\n" | $(XFST) $(VERBOSITY)
 
 ##################################################################
 #### END: Add local processing instructions ABOVE this line ######
