[Template merge - und] A rewritten pc file, with proper paths actually reflecting where things are installed, and with a shortened description to better fit the use of it.

--- a/giella-fao.pc.in
+++ b/giella-fao.pc.in
@@ -1,10 +1,12 @@
 prefix=@prefix@
 exec_prefix=${prefix}
 libdir=@libdir@
-dir=@libdir@/giella/fao
-srcdir=@datarootdir@/giella/fao
+datadir=@datarootdir@
+gtlang=fao
+dir=${datadir}/giella/${gtlang}
+srcdir=${datadir}/giella/${gtlang}
 
 Name: giella-fao
-Description: Finite-state transducers and other language processing tools for Faroese, developed by the Giellatekno and Divvun groups at UiT The Arctic University of Norway, in cooperation with the language communities.
-URL: 
+Description: Finite-state language processing tools for Faroese
+URL: http://giellatekno.uit.no/doc/index.html
 Version: @VERSION@
