Added full paradigm + k_1. The test is still not run (cf deliberatelŧ added error.

--- a/test/src/gt-norm-yamls/N-nouns_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/N-nouns_gt-norm.yaml
@@ -8,9 +8,39 @@ Config:
     App: lookup
 
 Tests:
-  Noun - bátur: # m
+  Noun - risi: # k_1
+    risi+N+Msc+Sg+Nom+Indef: risi
+    risi+N+Msc+Sg+Acc+Indef: risa
+    risi+N+Msc+Sg+Dat+Indef: risa
+    risi+N+Msc+Sg+Gen+Indef: risa
+    risi+N+Msc+Sg+Nom+Def: risiin
+    risi+N+Msc+Sg+Acc+Def: risan
+    risi+N+Msc+Sg+Dat+Def: risan
+    risi+N+Msc+Sg+Gen+Def: risan
+    risi+N+Msc+Pl+Nom+Indef: risar
+    risi+N+Msc+Pl+Acc+Indef: risar
+    risi+N+Msc+Pl+Dat+Indef: risum
+    risi+N+Msc+Pl+Gen+Indef: risa
+    risi+N+Msc+Pl+Nom+Def: risarnir
+    risi+N+Msc+Pl+Acc+Def: risarnar
+    risi+N+Msc+Pl+Dat+Def: risunum
+    risi+N+Msc+Pl+Gen+Def: risanna
+
+  Noun - bátur: # k_6
     bátur+N+Msc+Sg+Nom+Indef: bátur
     bátur+N+Msc+Sg+Acc+Indef: bát
-    bátur+N+Msc+Sg+Gen+Indef: báts
     bátur+N+Msc+Sg+Dat+Indef: báti
-    
+    bátur+N+Msc+Sg+Gen+Indef: báts
+    bátur+N+Msc+Sg+Nom+Def: báturin
+    bátur+N+Msc+Sg+Acc+Def: bátin
+    bátur+N+Msc+Sg+Dat+Def: bátinum
+    bátur+N+Msc+Sg+Gen+Def: bátsins
+    bátur+N+Msc+Pl+Nom+Indef: bátar
+    bátur+N+Msc+Pl+Acc+Indef: bátar
+    bátur+N+Msc+Pl+Dat+Indef: bátum
+    bátur+N+Msc+Pl+Gen+Indef: báta
+    bátur+N+Msc+Pl+Nom+Def: bátarnir
+    bátur+N+Msc+Pl+Acc+Def: bátarnar_remove-ths
+    bátur+N+Msc+Pl+Dat+Def: bátunum
+    bátur+N+Msc+Pl+Gen+Def: bátanna
+
