[Template merge - und] Added support for additional local lexc files not part of the lexical fst.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@100349 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -60,6 +60,15 @@ GENERATED_LEXC_SRCS=
 # Set this to the names of all source xml files, if any
 GT_XML_SRCS=
 
+# Define any additional sources here (compiled on their own, or just included
+# in the distro):
+GT_LOCAL_SRCS=
+
+### BEGIN: Local processing: ###
+
+
+### END: Local processing: ###
+
 include $(top_srcdir)/am-shared/src-morphology-dir-include.am
 
 # vim: set ft=automake:
