[Template merge - langs/und] Two template merges: * Added initial support for building language-specific macosx systemwide spellers. [r105104] * Added strip function to get rid of extra spaces, resolves bug in abbr.txt build. [r104185]
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@105106 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/configure.ac
+++ b/configure.ac
@@ -70,6 +70,8 @@ AC_SUBST([GTLANG], [fao])
 # should be the ISO 639-1 two-letter code if possible, otherwise usually same
 # as above
 AC_SUBST([GTLANG2], [fo])
+# GTLANGUAGE is the full language name as given by the ISO 639-3 file
+AC_SUBST([GTLANGUAGE], ["Faroese"])
 
 # We need special treatment of Java paths in Cygwin:
 AC_CANONICAL_HOST
