--- a/test/src/gt-norm-yamls/N-nouns_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/N-nouns_gt-norm.yaml
@@ -13,10 +13,10 @@ Tests:
     risi+N+Msc+Sg+Acc+Indef: risa
     risi+N+Msc+Sg+Dat+Indef: risa
     risi+N+Msc+Sg+Gen+Indef: risa
-    risi+N+Msc+Sg+Nom+Def: risiin
+    risi+N+Msc+Sg+Nom+Def: risin
     risi+N+Msc+Sg+Acc+Def: risan
-    risi+N+Msc+Sg+Dat+Def: risan
-    risi+N+Msc+Sg+Gen+Def: risan
+    risi+N+Msc+Sg+Dat+Def: risanum
+    risi+N+Msc+Sg+Gen+Def: risans
     risi+N+Msc+Pl+Nom+Indef: risar
     risi+N+Msc+Pl+Acc+Indef: risar
     risi+N+Msc+Pl+Dat+Indef: risum
@@ -40,7 +40,7 @@ Tests:
     bátur+N+Msc+Pl+Dat+Indef: bátum
     bátur+N+Msc+Pl+Gen+Indef: báta
     bátur+N+Msc+Pl+Nom+Def: bátarnir
-    bátur+N+Msc+Pl+Acc+Def: bátarnar_remove-ths
+    bátur+N+Msc+Pl+Acc+Def: bátarnar
     bátur+N+Msc+Pl+Dat+Def: bátunum
     bátur+N+Msc+Pl+Gen+Def: bátanna
 
