[Template merge - langs/und] Added a variable to hold source files to be included in the distro but not compiled as such.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@120187 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -60,9 +60,11 @@ GENERATED_LEXC_SRCS=
 # Set this to the names of all source xml files, if any
 GT_XML_SRCS=
 
-# Define any additional sources here (compiled on their own, or just included
-# in the distro):
+# Define any additional sources here (compiled on their own):
 GT_LOCAL_SRCS=
+
+# Define here any additional sources just included in the distro:
+GT_DISTRO_SRCS=
 
 ### BEGIN: Local processing: ###
 
