[Template merge - langs/und] Replaced 'giellatekno' with 'giella' or added Divvun, depending on context.

--- a/giella-fao.pc.in
+++ b/giella-fao.pc.in
@@ -8,5 +8,5 @@ srcdir=${datadir}/giella/${gtlang}
 
 Name: giella-fao
 Description: Finite-state language processing tools for Faroese
-URL: http://giellatekno.uit.no/doc/index.html
+URL: http://divvun.no/doc/index.html
 Version: @VERSION@
