[Template merge - langs/und] Added provisions for including xfscript files in the src/morphology/ directory.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@134787 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -64,8 +64,11 @@ GENERATED_LEXC_SRCS=
 # Set this to the names of all source xml files, if any
 GT_XML_SRCS=
 
-# Define any additional sources here (compiled on their own):
+# Define any additional lexc sources here (compiled on their own):
 GT_LOCAL_SRCS=
+
+# Define local xfscripts here:
+GT_LOCAL_XFSCRIPT_SRCS=
 
 # Define here any additional sources just included in the distro:
 GT_DISTRO_SRCS=
