--- a/test/src/morphology/generate-noun-lemmas.sh.in
+++ b/test/src/morphology/generate-noun-lemmas.sh.in
@@ -97,13 +97,13 @@ for f in $fsttype; do
             > $generated_lemmas.$f.txt 
         # Generate nouns, extract those that do not generate in singular masculine,
         # generate the rest in plural:
-        sed 's/$/+N+Fem+Sg+Nom+Indef/' $lemmas | $lookup_tool $generator_file.$suffix \
+        sed 's/$/+N+Msc+Sg+Nom+Indef/' $lemmas | $lookup_tool $generator_file.$suffix \
             | fgrep "+?" | cut -d "+" -f1 | sed 's/$/+N+Fem+Sg+Nom+Indef/' \
             | $lookup_tool $generator_file.$suffix | cut -f2 \
             | grep -v "^$" >> $generated_lemmas.$f.txt 
         # Generate nouns, extract those that do not generate in singular,
         # generate the rest in plural:
-        sed 's/$/+N+Neu+Sg+Nom+Indef/' $lemmas | $lookup_tool $generator_file.$suffix \
+        sed 's/$/+N+Fem+Sg+Nom+Indef/' $lemmas | $lookup_tool $generator_file.$suffix \
             | fgrep "+?" | cut -d "+" -f1 | sed 's/$/+N+Neu+Sg+Nom+Indef/' \
             | $lookup_tool $generator_file.$suffix | cut -f2 \
             | grep -v "^$" >> $generated_lemmas.$f.txt 
