--- a/test/src/morphology/generate-verb-lemmas.sh.in
+++ b/test/src/morphology/generate-verb-lemmas.sh.in
@@ -95,6 +95,11 @@ for f in $fsttype; do
         sed 's/$/+V+Inf/' $lemmas | $lookup_tool $generator_file.$suffix \
             | fgrep -v "+?" | grep -v "^$" | cut -f2 | sort -u \
             > $generated_lemmas.$f.txt 
+        # ... and then store the passive verbs:
+        sed 's/$/+V+Inf/' $lemmas | $lookup_tool $generator_file.$suffix \
+            | fgrep "+?" | cut -d "+" -f1 | sed 's/$/+V+Inf+Pass/' \
+            | $lookup_tool $generator_file.$suffix | cut -f2 \
+            | grep -v "^$" >> $generated_lemmas.$f.txt 
 
 ###### Collect results, and generate debug info if FAIL: #######
         # Sort and compare original input with resulting output - the diff is
