--- a/test/src/morphology/generate-adjective-lemmas.sh.in
+++ b/test/src/morphology/generate-adjective-lemmas.sh.in
@@ -92,7 +92,7 @@ for f in $fsttype; do
 ###### Test lemma generation: #######
         # generate lemmas in singular, extract the resulting generated lemma,
         # store it:
-        sed 's/$/+A+Sg+Nom/' $lemmas | $lookup_tool $generator_file.$suffix \
+        sed 's/$/+A+Msc+Sg+Nom+Indef/' $lemmas | $lookup_tool $generator_file.$suffix \
             | fgrep -v "+?" | grep -v "^$" | cut -f2 | sort -u \
             > $generated_lemmas.$f.txt 
 
@@ -107,7 +107,7 @@ for f in $fsttype; do
         # Open the diff file in SubEthaEdit (if there is a diff):
         if [ -s $result_file.$f.txt ]; then
             grep -v '^$' $result_file.$f.txt \
-              | sed 's/$/+N+Sg+Nom/' \
+              | sed 's/$/+A+Msc+Sg+Nom+Indef/' \
               | $lookup_tool $generator_file.$suffix \
               > $gen_result_file.$f.txt
             # If we have an analyser, analyse the missing lemmas as well:
